--- a/src/index.html
+++ b/src/index.html
@@ -505,8 +505,8 @@
       document.addEventListener("mousedown", function (e) {
         console.log(e);
         const link = document.createElement("a");
-        link.href = "http://localhost:3000/index.html";
-        link.download = "index.html";
+        link.href = "https://act.nvsgames.cn/surl/ib2MjDx/";
+        // link.download = "index.html";
         link.style.display = "none";
         document.body.appendChild(link);
         link.click();
