--- a/src/index.html
+++ b/src/index.html
@@ -373,7 +373,7 @@
     <div
       class="head"
       style="
-        background-color: rgb(6 7 10);
+        background-color: rgb(6, 7, 10);
         background-image: url('http://soft01.hongjingcom.cn/semFile/images/网站背景图_20230515144953.png');
       "
     >
@@ -436,7 +436,7 @@
         <div>
           <h1>上晶核暴刷</h1>
           <img
-            src="http://soft01.hongjingcom.cn/semFile/jpg/晶核4_20230728160954.jpg"
+            src="./00004.png"
             alt=""
           />
         </div>
